--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
@@ -9,14 +9,14 @@ ConfiguracionBotonTexto.2=Borrar
 FolderActionTexto.0=Copiar Huellas a Portapapeles
 FolderActionTexto.1=Salir
 FolderActionTexto.2=Plugin para elaborar tablas de huellas
-FolderActionTexto.3=Copiar huellas digitales al portapapeles 
+FolderActionTexto.3=Listado de huellas digitales 
 FolderActionTexto.4=Seleccionar documentos
 FolderActionTexto.5=Extracción de documentos
 FolderActionTexto.6=Proceso de extracción de documentos finalizado
 FolderActionTexto.7=Añadir
 FolderActionTexto.8=Fichero pdf (*.pdf)
 FolderActionTexto.9=Seleccionar fichero PDF
-FolderActionTexto.10=KKKKKKK
+FolderActionTexto.10=Presentación en formato:
 FolderActionTexto.11=Directorio con archivos de firma XML (Internally Detached)
 FolderActionTexto.12=Examinar
 FolderActionTexto.13=Incluir subdirectorios
@@ -28,4 +28,5 @@ FolderActionTexto.18=Añadir directorio
 FolderActionTexto.19=Borrar todo
 FolderActionTexto.20=Formato Huella Digital 
 FolderActionTexto.21=Algoritmo
-FolderActionTexto.22=Formato 
+FolderActionTexto.22=Formato
+FolderActionTexto.23=Tipo de letra 
