--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
@@ -1,10 +1,15 @@
 ConfiguracionMensaje.0=<html>Consultar el manual de ayuda (en proceso)<br></html>
-ConfiguracionMensaje.1=<html><b>Lorem ipsum 1</b></html>
+ConfiguracionMensaje.1=Ejemplo: Remisión grupo de documentos
 ConfiguracionMensaje.2=<html>Lorem ipsum 2</html>
 
 ConfiguracionBotonTexto.0=Manual de ayuda
-ConfiguracionBotonTexto.1=Añadir
-ConfiguracionBotonTexto.2=Borrar
+ConfiguracionBotonTexto.1=Documento 1
+ConfiguracionBotonTexto.2=Documento 2
+ConfiguracionBotonTexto.3=Documento 3
+ConfiguracionBotonTexto.4=Documentos para remitir:
+ConfiguracionBotonTexto.5=Indice 
+ConfiguracionBotonTexto.6=Oficio 
+ConfiguracionBotonTexto.7=Relaciones
 
 FolderActionTexto.0=Copiar Huellas a Portapapeles
 FolderActionTexto.1=Salir
