--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
@@ -1,10 +1,13 @@
 ConfiguracionMensaje.0=<html>Consultar el manual de ayuda (en proceso)<br></html>
-ConfiguracionMensaje.1=Ejemplo: Remisión grupo de documentos
-ConfiguracionMensaje.2=<html>Lorem ipsum 2</html>
+ConfiguracionMensaje.1=Ejemplo de uso
+ConfiguracionMensaje.2=Elaborar un índice mediante huellas digitales
+ConfiguracionMensaje.3=Documentos utilizados en el ejemplo
+
 
 ConfiguracionBotonTexto.0=Manual de ayuda
 ConfiguracionBotonTexto.1=Ver documento
-ConfiguracionBotonTexto.2=Documentos utilizados en el ejemplo para remisión de documentos
+ConfiguracionBotonTexto.2=Ejemplo
+ConfiguracionBotonTexto.3=Relaciones
 
 FolderActionTexto.0=Copiar Huellas a Portapapeles
 FolderActionTexto.1=Salir
