--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
@@ -32,4 +32,5 @@ FolderActionTexto.19=Borrar todo
 FolderActionTexto.20=Formato Huella Digital 
 FolderActionTexto.21=Algoritmo
 FolderActionTexto.22=Formato
-FolderActionTexto.23=Tipo de letra 
+FolderActionTexto.23=Tipo de letra
+FolderActionTexto.24=Crear fichero hexhash  
