--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/messages.properties
@@ -19,13 +19,13 @@ FolderActionTexto.6=Proceso de extracción de documentos finalizado
 FolderActionTexto.7=Añadir
 FolderActionTexto.8=Fichero pdf (*.pdf)
 FolderActionTexto.9=Seleccionar fichero PDF
-FolderActionTexto.10=Presentación en formato:
+FolderActionTexto.10=Incluir:
 FolderActionTexto.11=Directorio con archivos de firma XML (Internally Detached)
 FolderActionTexto.12=Examinar
 FolderActionTexto.13=Incluir subdirectorios
 FolderActionTexto.14=Solo Pdf
-FolderActionTexto.15=Tabla 
-FolderActionTexto.16=Texto 
+FolderActionTexto.15=Tamaño 
+FolderActionTexto.16=Carpeta 
 FolderActionTexto.17=Borrar
 FolderActionTexto.18=Añadir directorio
 FolderActionTexto.19=Borrar todo
@@ -33,4 +33,4 @@ FolderActionTexto.20=Formato Huella Digital
 FolderActionTexto.21=Algoritmo
 FolderActionTexto.22=Formato
 FolderActionTexto.23=Tipo de letra
-FolderActionTexto.24=Crear fichero hexhash  
+FolderActionTexto.24=Crear ficheros hash  
